# outram-park-backend

./: CLAUDE.md  Cargo.toml  README.md  tampines_session_2026-06-22.md  thermosyspro_twophase_choked_flow.md
crates/boon-lay/: CLAUDE.md  Cargo.toml
crates/boon-lay/examples/boon_lay_decay_simulator/: main.rs
crates/boon-lay/examples/boon_lay_decay_simulator/decay_simulator_v1/: mod.rs
crates/boon-lay/examples/triso_simulator/: main.rs
crates/boon-lay/examples/triso_simulator/triso_simulator_v1/: mod.rs
crates/boon-lay/src/: README.md  lib.rs
crates/boon-lay/src/decay_xml_info_serde/: mod.rs
crates/boon-lay/src/lagrangian_decay_simulator/: README.md  mod.rs
crates/boon-lay/src/lagrangian_decay_simulator/lagrangian_diffusion/: chatgpt_5_diffusion_normal_dist_central_limit_theorem_simulator.rs  chatgpt_5_diffusion_normal_dist_central_limit_theorem_simulator_time_based.rs  chatgpt_5_diffusion_simulator.rs  chatgpt_5_list_of_vectors_uniformly_distributed_on_spherical_shell.rs  isotropic_scattering.rs  mod.rs  triso_particle_widget.rs
crates/boon-lay/src/lagrangian_decay_simulator/monte_carlo_single_radionuclide_decay_simulator/: half_life_ref_calc.ods  mod.rs  postprocessing.rs  tests.rs
crates/boon-lay/src/lagrangian_decay_simulator/stochastic_decay_chain/: iterator_for_decay_chain.rs  mod.rs
crates/boon-lay/src/lagrangian_transmutation_and_fission_simulator/: README.md  mod.rs
crates/boon-lay/src/nuclide_reaction_and_decay_data/: actinides_test.rs  alkali_metals_and_hydrogen.rs  alkaline_earth_metals.rs  boron_group_test.rs  carbon_group_test.rs  chalcogens_test.rs  halogens_test.rs  heavier_than_actinides.rs  lanthanides_test.rs  mod.rs  noble_gases_test.rs  parse_nuclides_to_decay_data.rs  pnictogens_test.rs  transition_metals_test.rs
crates/boon-lay/src/prelude/: mod.rs
crates/chem-eng-real-time-process-control-simulator/: CLAUDE.md  Cargo.toml
crates/chem-eng-real-time-process-control-simulator/src/: main.rs
crates/chem-eng-real-time-process-control-simulator/src/examples/: analog_pid_demos.rs  feedback_control_examples.rs  first_order_demos.rs  generic_transfer_fn_demos.rs  mod.rs  second_order_demos.rs
crates/chem-eng-real-time-process-control-simulator/src/lib/: lib.rs
crates/dwsim-libs/: CLAUDE.md  Cargo.toml
crates/dwsim-libs/src/: lib.rs
crates/openfoam-appbuilder-lib/: CLAUDE.md  Cargo.toml  README.md  TODO.md
crates/openfoam-appbuilder-lib/src/: error.rs  lib.rs  prelude.rs
crates/openfoam-appbuilder-lib/src/io/: mod.rs
crates/openfoam-appbuilder-lib/src/solvers/: bc_util.rs  mod.rs
crates/openfoam-appbuilder-lib/tutorials/: pimple_foam_cavity.rs  rho_central_foam_shock_tube.rs  rho_pimple_foam_aerofoil_naca0012.rs
crates/openfoam-basic-lib/: CLAUDE.md  Cargo.toml  README.md
crates/openfoam-basic-lib/src/: lib.rs  prelude.rs
crates/openfoam-basic-lib/src/fields/: field.rs  mod.rs  surface_field.rs  vol_field.rs
crates/openfoam-basic-lib/src/fluid_thermo/: mod.rs  psi_thermo.rs  rho_thermo.rs  solid_thermo.rs  traits.rs
crates/openfoam-basic-lib/src/fv_operators/: adjust_phi.rs  mod.rs
crates/openfoam-basic-lib/src/interpolation/: interpolate_spline_xy.rs  interpolate_xy.rs  mod.rs
crates/openfoam-basic-lib/src/ldu_matrix/: fv_matrix.rs  fv_vector_matrix.rs  ldu_matrix.rs  mod.rs
crates/openfoam-basic-lib/src/math/: erf_inv.rs  inc_gamma.rs  inv_inc_gamma.rs  mod.rs
crates/openfoam-basic-lib/src/matrix/: mod.rs  square_matrix.rs
crates/openfoam-basic-lib/src/mesh/: fv_mesh.rs  mod.rs  region_interface.rs
crates/openfoam-basic-lib/src/ode/: euler.rs  mod.rs  rkf45.rs  rosenbrock23.rs
crates/openfoam-basic-lib/src/polynomial/: cubic_eqn.rs  linear_eqn.rs  mod.rs  polynomial.rs  quadratic_eqn.rs  roots.rs
crates/openfoam-basic-lib/src/primitives/: mod.rs  scalar.rs  spherical_tensor.rs  symm_tensor.rs  tensor.rs  vector.rs
crates/openfoam-basic-lib/src/thermophysics/: constants.rs  error.rs  imports.rs  mod.rs  quantities.rs
crates/openfoam-basic-lib/tests/: matrix_bench.rs  nnc261.mtx  nnc261_solve.rs
crates/openfoam-turbulence-lib/: CLAUDE.md  Cargo.toml  README.md
crates/openfoam-turbulence-lib/src/: error.rs  lib.rs  prelude.rs  traits.rs
crates/openfoam-turbulence-lib/src/k_epsilon/: mod.rs
crates/openfoam-turbulence-lib/src/k_omega/: mod.rs
crates/openfoam-turbulence-lib/src/k_omega_sst/: mod.rs
crates/openfoam-turbulence-lib/src/laminar/: mod.rs
crates/openfoam-turbulence-lib/src/les/: mod.rs  smagorinsky.rs
crates/openfoam-turbulence-lib/src/spalart_allmaras/: mod.rs
crates/openfoam-turbulence-lib/src/wall_functions/: mod.rs
crates/openmc-libs/: CLAUDE.md  Cargo.toml  NUCLEAR_DATA.md
crates/openmc-libs/src/: lib.rs  prelude.rs
crates/openmc-libs/src/geometry/: cell.rs  geometry.rs  lattice.rs  mod.rs  position.rs  surface.rs  universe.rs
crates/openmc-libs/src/material/: material.rs  mod.rs  nuclide.rs  reaction.rs  thermal.rs
crates/openmc-libs/src/particle/: bank.rs  mod.rs  particle.rs
crates/openmc-libs/src/physics/: fission.rs  mod.rs  physics_mg.rs  scatter.rs  transport.rs
crates/openmc-libs/src/rng/: distributions.rs  lcg.rs  mod.rs
crates/openmc-libs/src/source/: angle.rs  energy.rs  mod.rs  source.rs  spatial.rs
crates/openmc-libs/src/tally/: filter.rs  mod.rs  scoring.rs  tally.rs
crates/tampines-steam-tables/: CLAUDE.md  Cargo.toml  README.md
crates/tampines-steam-tables/debug_markdowns/: CLAUDE.md  zaloudek_in_dome_debug.md  zaloudek_subcooled_debug.md
crates/tampines-steam-tables/examples/fhr_cli_debug/: main.rs
crates/tampines-steam-tables/examples/fhr_sim_v2/: main.rs
crates/tampines-steam-tables/src/: prelude.rs
crates/tampines-steam-tables/src/constants/: mod.rs
crates/tampines-steam-tables/src/region_4_vap_liq_equilibrium/: mod.rs  speed_of_sound_eqm.rs  tests.rs
crates/teh-o-prke/: CLAUDE.md  Cargo.toml
crates/teh-o-prke/src/: teh_o_prke_error.rs
crates/teh-o-prke/src/zero_power_prke/: tests.rs
crates/tuas_boussinesq_solver/: CLAUDE.md  Cargo.toml  README.md  patch_notes.md
(+434 files in other folders)
