[package]
name = "boon-lay"
version = "0.1.2"
edition.workspace = true
license.workspace = true
description = "BOmbardment of neutrons On Nuclides with Lagrangian transport and transmutation Yields — Lagrangian radionuclide transport, decay, fission, and diffusion for TRISO/HTGR/FHR"
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
uom             = { workspace = true }
serde           = { workspace = true }
serde-xml-rs    = { workspace = true }
anyhow          = { workspace = true }
openmc-libs     = { workspace = true }
fission-yields-data               = { workspace = true }
openmc-endf-8-depletion-lib-b     = { workspace = true }

[dev-dependencies]
approx          = { workspace = true }
rayon           = { workspace = true }
egui            = { workspace = true }
eframe          = { workspace = true }
egui_plot       = { workspace = true }
egui_extras     = { workspace = true }
log             = { workspace = true }
image           = { workspace = true }
csv             = { workspace = true }

# [[example]]
# name = "boon_lay_decay_simulator"
# Uncomment after copying examples/boon_lay_decay_simulator/main.rs from ../boon-lay/

# [[example]]
# name = "triso_simulator"
# Uncomment after copying examples/triso_simulator/main.rs from ../boon-lay/
