[package]
name = "dwsim-libs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Pure-Rust port of DWSIM thermal-hydraulics and thermodynamics kernels"
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
thiserror = { workspace = true }
ndarray = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
