[package]
name = "openfoam-appbuilder-lib"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "OpenFOAM solver applications, polyMesh I/O, and case file parsing translated to Rust"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
categories.workspace = true

[dependencies]
thiserror.workspace = true
uom.workspace = true
ndarray.workspace = true
serde.workspace = true
openfoam-basic-lib.workspace = true
openfoam-turbulence-lib.workspace = true

[dev-dependencies]
approx.workspace = true

[lib]
name = "openfoam_appbuilder_lib"
path = "src/lib.rs"
