[package]
name = "openfoam-appbuilder-lib"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "OpenFOAM solver applications, polyMesh I/O, and case file parsing translated to Rust"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
categories.workspace = true

[dependencies]
thiserror.workspace = true
uom.workspace = true
ndarray.workspace = true
serde.workspace = true
openfoam-basic-lib.workspace = true
openfoam-turbulence-lib.workspace = true

[dev-dependencies]
approx.workspace = true

[lib]
name = "openfoam_appbuilder_lib"
path = "src/lib.rs"

# ── Tutorial integration tests ────────────────────────────────────────────────
# Each tutorial reads a real OpenFOAM-generated polyMesh + field files,
# runs the Rust solver, and checks against the OpenFOAM reference output.
# All tests are marked #[ignore] until the case files are present.
# Run a single tutorial:  cargo test -p openfoam-appbuilder-lib --test <name> -- --include-ignored

[[test]]
name = "tutorial_rho_central_foam_shock_tube"
path = "tutorials/rho_central_foam_shock_tube.rs"

[[test]]
name = "tutorial_pimple_foam_cavity"
path = "tutorials/pimple_foam_cavity.rs"

[[test]]
name = "tutorial_rho_pimple_foam_aerofoil_naca0012"
path = "tutorials/rho_pimple_foam_aerofoil_naca0012.rs"
