[package]
name = "openfoam-basic-lib"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "OpenFOAM primitive functions translated to Rust"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
categories.workspace = true

[dependencies]
thiserror.workspace = true
uom.workspace = true
ndarray.workspace = true

[lib]
name = "openfoam_basic_lib"
path = "src/lib.rs"
