[package]
name = "openfoam-basic-lib"
version = "0.1.4"
edition.workspace = true
license.workspace = true
description = "OpenFOAM primitive functions translated to Rust"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
categories.workspace = true

[dependencies]
thiserror.workspace = true
uom.workspace = true
ndarray.workspace = true

[dev-dependencies]
approx.workspace = true
ndarray.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
ndarray-linalg = { workspace = true, features = ["openblas-system"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
ndarray-linalg = { workspace = true, features = ["intel-mkl-static"] }

[target.'cfg(windows)'.dev-dependencies]
ndarray-linalg = { workspace = true, features = ["intel-mkl-static"] }

[lib]
name = "openfoam_basic_lib"
path = "src/lib.rs"
