[package]
name = "openfoam-turbulence-lib"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "OpenFOAM turbulence models translated to Rust (RAS and LES)"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
categories.workspace = true

[dependencies]
thiserror.workspace = true
uom.workspace = true
ndarray.workspace = true
openfoam-basic-lib.workspace = true

[dev-dependencies]
approx.workspace = true

[lib]
name = "openfoam_turbulence_lib"
path = "src/lib.rs"
