[package]
name = "openmc-libs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Pure-Rust port of OpenMC Monte Carlo neutron transport kernels"
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
thiserror = { workspace = true }
ndarray = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
